*** 3.5.2

+ 2 bug fixes:
    + Patch up Rails fixture defaults for Test::Rails::TestCase.
    + Session now properly hooked up to controllers.

*** 3.5.1 / 2007-04-17

+ 4 bug fixes:
    + Fixed gem name to be camel-case again. Fixed on rubyforge too.
	+ Fixed rdoc for hooks.
	+ Fixed redgreen, results changed to an array.
    + Patch up Rails fixture defaults, since they're not inheriting properly.

*** 3.5.0 / 2007-04-12

+ 4 major enhancements:
    + Now requires RubyGems 0.9.1 or newer.
    + Autotest and unit_diff are both unbuffered. Results are more live.
    + Refactored and redesigned how files map to test from Sean Carley. See fixtures plugin as an example.
    + Generalize how autotest handler is instantiated and invoked, allowing for many more autotest types, including combos.
+ 23 minor enhancements:
    + Added all_good hook if initial run was all_good as well.
    + Added assert_in_epsilon to ZentestAssertions.
    + Added autotest plugin to auto-update source ala tinderbox/cruisecontrol.
    + Added autotest plugin to update ichat/adium IM status with code stats.
    + Added autotest plugin to update the GNU screen statusbar from Yuichi Tateno.
    + Added autotest syntax error handling from Ryan Platte.
    + Added autotest/emacs emacs integration plugin!!! YAY!
    + Added autotest/migrate.rb.
    + Added camping support from Geoffrey Grossenbach.
    + Added changed file reporting to autotest via -v flag.
    + Added informative summary and filtering via ENV['VERSIONS'] to multiruby.
    + Added libnotify support from Kazuo Saito.
    + Added lots of rdoc patches from Hugh Sasse.
    + Added rjs files to view_test_case.
    + Added rspec_autotest "stolen" from caldersphere.net
    + Added run_command hook to trigger the start of a test run.
    + Added tmp to rails' exceptions list.
    + Added unit_diff command variable to autotest for customizing flags and such.
    + Added zentest_mapping.rb and test.